# fastApiProject

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  readme.md  test.db  test_main.http
user_module/: README.md  model.py  router.py  router_test.py  schema.py
