[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["yuhao.he"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.14.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
